DOrmModel: Object that represent ORM model in json file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(lib/json)
 set(project_SRC
     src/data/DConfig.cpp
     src/data/DOrmField.cpp
+    src/data/DOrmModel.cpp
 
     src/Parser.cpp
 
